--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
             scroll-behavior: smooth;
         }
         body {
-            font-family: 'Inter', "Montserrat Alternates'
+            font-family: 'Inter','Montserrat Alternates'
             background-color: #f9fafb; /* Equivalent to bg-gray-50 */
             color: #1f2937; /* Equivalent to text-gray-900 */
         }
