--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts for 'Inter' -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         /* Custom styles for the mobile menu toggle */
         #mobile-menu {
@@ -21,7 +21,7 @@
             scroll-behavior: smooth;
         }
         body {
-            font-family: 'Inter','Montserrat Alternates'
+            font-family: 'Montserrat Alternates', sans-serif;
             background-color: #f9fafb; /* Equivalent to bg-gray-50 */
             color: #1f2937; /* Equivalent to text-gray-900 */
         }
