--- a/main.html
+++ b/main.html
@@ -91,6 +91,7 @@
         </div>
     </section>
 
+    <!-- Statistics Section -->
     <section id="statistics" class="pt-24 pb-16 bg-gradient-to-r from-[#353087] to-[#D5AFFF] text-white">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
